--- a/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
+++ b/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
@@ -578,8 +578,7 @@
     "print(\"Stored SVD factors with shapes:\")\n",
     "print(f\"U: {svd_U.shape}, V: {svd_V.shape}, Sigma: {svd_S.shape}\")\n",
     "\n",
-    "# Feature construction parameters (adjust K_TRUNC after inspecting the statistics above)\n",
-    "K_TRUNC = min_dim  # placeholder; tune manually as needed\n",
+    "K_TRUNC = min_dim  # Actually, they are ≈full-rank\n",
     "ALLOW_ZERO_PADDING = True  # set to False to require full rank for all samples\n",
     "\n",
     "num_samples = N_users * N_batches\n",
