Compute metric by batch

--- a/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
+++ b/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
@@ -1652,6 +1652,7 @@
    "source": [
     "# Sampling SB-SDE & inverse reconstruction utilities\n",
     "\n",
+    "import math\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -1676,42 +1677,91 @@
     "        g = g_of_t((k + 0.5) / steps)\n",
     "        noise = torch.randn_like(x)\n",
     "        x = x + dt * v + (g * np.sqrt(dt)) * noise\n",
-    "    return x  # [N, C, L]\n",
+    "    return x  # [B, C, L]\n",
     "\n",
     "\n",
     "num_eval_samples = 100\n",
-    "generated_features = sample_sb_sde(\n",
-    "    model,\n",
-    "    num_samples=num_eval_samples,\n",
-    "    steps=4,\n",
-    "    shape=(feature_channels, sequence_length),\n",
-    "    sde_sigma=0.0,\n",
-    "    device=device,\n",
-    ")\n",
+    "MAX_EVAL_BATCH = 100\n",
+    "num_chunks = math.ceil(num_eval_samples / MAX_EVAL_BATCH)\n",
     "\n",
-    "orig_feature_subset = train_tensor[:generated_features.shape[0]].to(device)\n",
+    "generated_feature_chunks = []\n",
+    "orig_feature_chunks = []\n",
+    "generated_complex_chunks = []\n",
+    "original_complex_chunks = []\n",
+    "orig_svd_chunks = []\n",
+    "gen_svd_chunks = []\n",
     "\n",
-    "orig_svd_features = svd_feature_tensor_torch[:generated_features.shape[0]]\n",
-    "orig_svd_features_cpu = orig_svd_features.detach().cpu()\n",
+    "total_processed = 0\n",
+    "for chunk_idx in range(num_chunks):\n",
+    "    current_size = min(MAX_EVAL_BATCH, num_eval_samples - total_processed)\n",
+    "    if current_size <= 0:\n",
+    "        break\n",
     "\n",
-    "if TRAIN_SPACE == 'svd':\n",
-    "    generated_complex = reconstruct_channel_from_features(generated_features, svd_feature_metadata)\n",
-    "    original_complex = reconstruct_channel_from_features(orig_feature_subset, svd_feature_metadata)\n",
-    "    generated_svd_features = generated_features\n",
-    "else:\n",
-    "    generated_complex = amp_phase_features_to_complex(generated_features, amp_phase_metadata)\n",
-    "    original_complex = amp_phase_features_to_complex(orig_feature_subset, amp_phase_metadata)\n",
-    "    generated_svd_np = complex_to_svd_feature_tensor(generated_complex, svd_feature_metadata)\n",
-    "    generated_svd_features = torch.from_numpy(generated_svd_np)\n",
+    "    gen_chunk = sample_sb_sde(\n",
+    "        model,\n",
+    "        num_samples=current_size,\n",
+    "        steps=4,\n",
+    "        shape=(feature_channels, sequence_length),\n",
+    "        sde_sigma=0.0,\n",
+    "        device=device,\n",
+    "    )\n",
     "\n",
-    "generated_features_cpu = generated_features.detach().cpu()\n",
-    "orig_feature_subset_cpu = orig_feature_subset.detach().cpu()\n",
+    "    real_chunk_cpu = train_tensor[total_processed:total_processed + current_size]\n",
+    "    real_chunk = real_chunk_cpu.to(device)\n",
     "\n",
-    "generated_svd_features_cpu = generated_svd_features.detach().cpu()\n",
-    "orig_svd_features_for_metrics = orig_svd_features_cpu\n",
-    "gen_svd_features_for_metrics = generated_svd_features_cpu\n",
+    "    if TRAIN_SPACE == 'svd':\n",
+    "        gen_svd_chunk_cpu = gen_chunk.detach().cpu()\n",
+    "        orig_svd_chunk_cpu = svd_feature_tensor_torch[total_processed:total_processed + current_size].detach().cpu()\n",
     "\n",
-    "print('Generated feature tensor:', generated_features.shape)\n",
+    "        gen_complex_chunk = reconstruct_channel_from_features(gen_chunk, svd_feature_metadata)\n",
+    "        orig_complex_chunk = reconstruct_channel_from_features(real_chunk, svd_feature_metadata)\n",
+    "    else:\n",
+    "        gen_complex_chunk = amp_phase_features_to_complex(gen_chunk, amp_phase_metadata)\n",
+    "        orig_complex_chunk = amp_phase_features_to_complex(real_chunk, amp_phase_metadata)\n",
+    "\n",
+    "        gen_svd_np = complex_to_svd_feature_tensor(gen_complex_chunk, svd_feature_metadata)\n",
+    "        gen_svd_chunk_cpu = torch.from_numpy(gen_svd_np)\n",
+    "        orig_svd_chunk_cpu = svd_feature_tensor_torch[total_processed:total_processed + current_size].detach().cpu()\n",
+    "\n",
+    "    generated_feature_chunks.append(gen_chunk.detach().cpu())\n",
+    "    orig_feature_chunks.append(real_chunk_cpu.detach().cpu())\n",
+    "    generated_complex_chunks.append(gen_complex_chunk)\n",
+    "    original_complex_chunks.append(orig_complex_chunk)\n",
+    "    gen_svd_chunks.append(gen_svd_chunk_cpu)\n",
+    "    orig_svd_chunks.append(orig_svd_chunk_cpu)\n",
+    "\n",
+    "    total_processed += current_size\n",
+    "\n",
+    "\n",
+    "if not generated_feature_chunks:\n",
+    "    raise ValueError('No evaluation samples were generated.')\n",
+    "\n",
+    "\n",
+    "def _concat_torch(chunks):\n",
+    "    return torch.cat([c if isinstance(c, torch.Tensor) else torch.as_tensor(c) for c in chunks], dim=0)\n",
+    "\n",
+    "\n",
+    "def _concat_numpy(chunks):\n",
+    "    return np.concatenate(chunks, axis=0)\n",
+    "\n",
+    "\n",
+    "generated_features_cpu = _concat_torch(generated_feature_chunks)\n",
+    "orig_feature_subset_cpu = _concat_torch(orig_feature_chunks)\n",
+    "\n",
+    "generated_complex = _concat_numpy(generated_complex_chunks)\n",
+    "original_complex = _concat_numpy(original_complex_chunks)\n",
+    "\n",
+    "gen_svd_features_for_metrics = _concat_torch(gen_svd_chunks)\n",
+    "orig_svd_features_for_metrics = _concat_torch(orig_svd_chunks)\n",
+    "\n",
+    "generated_features = generated_features_cpu  # backward compatibility\n",
+    "orig_feature_subset = orig_feature_subset_cpu\n",
+    "\n",
+    "generated_svd_features_cpu = gen_svd_features_for_metrics\n",
+    "orig_svd_features_cpu = orig_svd_features_for_metrics\n",
+    "\n",
+    "print(f'Evaluation used {total_processed} samples in {len(generated_feature_chunks)} chunk(s) of up to {MAX_EVAL_BATCH}.')\n",
+    "print('Generated feature tensor:', generated_features_cpu.shape)\n",
     "print('Reconstructed complex channel from generated samples:', generated_complex.shape)\n",
     "print('Reference complex channel tensor:', original_complex.shape)\n"
    ],
