--- a/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
+++ b/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
@@ -1730,9 +1730,11 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-09-19T12:22:55.259441Z",
-     "start_time": "2025-09-19T12:22:52.407036Z"
+     "start_time": "2025-09-19T12:56:39.380518Z"
     }
    },
    "cell_type": "code",
@@ -1743,6 +1745,7 @@
     "import torch\n",
     "import ot\n",
     "from ot.sliced import sliced_wasserstein_distance\n",
+    "import scipy.stats as stats\n",
     "\n",
     "orig_features_for_metrics = orig_svd_features_for_metrics\n",
     "gen_features_for_metrics = gen_svd_features_for_metrics\n",
@@ -1766,6 +1769,36 @@
     "        print(f\"{label} -> no valid entries\")\n",
     "\n",
     "\n",
+    "def sample_independent_gaussian(real_array, num_samples, rng):\n",
+    "    real_flat = real_array.reshape(real_array.shape[0], -1)\n",
+    "    mean = real_flat.mean(axis=0)\n",
+    "    std = real_flat.std(axis=0)\n",
+    "    std = np.where(std < 1e-12, 0.0, std)\n",
+    "    samples = rng.normal(loc=mean, scale=std, size=(num_samples, real_flat.shape[1]))\n",
+    "    return samples.reshape((num_samples,) + real_array.shape[1:]).astype(real_array.dtype, copy=False)\n",
+    "\n",
+    "\n",
+    "def sample_histogram_baseline(real_array, num_samples, rng, bins='auto'):\n",
+    "    real_flat = real_array.reshape(real_array.shape[0], -1)\n",
+    "    num_coords = real_flat.shape[1]\n",
+    "    samples_flat = np.zeros((num_samples, num_coords), dtype=real_array.dtype)\n",
+    "    for idx in range(num_coords):\n",
+    "        data = real_flat[:, idx]\n",
+    "        if not np.all(np.isfinite(data)):\n",
+    "            raise ValueError('Non-finite data encountered in histogram baseline.')\n",
+    "        if np.allclose(data, data[0]):\n",
+    "            samples_flat[:, idx] = data[0]\n",
+    "            continue\n",
+    "        hist, bin_edges = np.histogram(data, bins=bins, density=True)\n",
+    "        if not np.all(np.isfinite(hist)) or hist.sum() <= 0:\n",
+    "            samples_flat[:, idx] = rng.choice(data, size=num_samples)\n",
+    "        else:\n",
+    "            seed = int(rng.integers(0, 2**32))\n",
+    "            rv = stats.rv_histogram((hist, bin_edges))\n",
+    "            samples_flat[:, idx] = rv.rvs(size=num_samples, random_state=np.random.default_rng(seed))\n",
+    "    return samples_flat.reshape((num_samples,) + real_array.shape[1:]).astype(real_array.dtype, copy=False)\n",
+    "\n",
+    "\n",
     "sigma_real = real_components['sigma']\n",
     "sigma_gen = gen_components['sigma']\n",
     "sigma_real_masked = sigma_real[sigma_real > 0]\n",
@@ -1780,28 +1813,48 @@
     "_print_stats('amp(V) real', real_components['amp_v'])\n",
     "_print_stats('amp(V) generated', gen_components['amp_v'])\n",
     "_print_stats('phase(V) real', real_components['phase_v'])\n",
-    "_print_stats('phase(V) generated', gen_components['phase_v'])\n"
+    "_print_stats('phase(V) generated', gen_components['phase_v'])\n",
+    "\n",
+    "\n",
+    "num_baseline_samples = orig_svd_features_for_metrics.shape[0]\n",
+    "rng = np.random.default_rng(1234)\n",
+    "\n",
+    "# --- SVD space baselines ---\n",
+    "svd_real_np = orig_svd_features_for_metrics.detach().cpu().numpy()\n",
+    "svd_gauss_samples = sample_independent_gaussian(svd_real_np, num_baseline_samples, rng)\n",
+    "svd_hist_samples = sample_histogram_baseline(svd_real_np, num_baseline_samples, rng)\n",
+    "\n",
+    "svd_gauss_flat = flatten_feature_tensor_for_swd(svd_gauss_samples, max_points=200000, seed=101)\n",
+    "svd_hist_flat = flatten_feature_tensor_for_swd(svd_hist_samples, max_points=200000, seed=102)\n",
+    "\n",
+    "swd_svd_gauss = sliced_wasserstein_distance(X, svd_gauss_flat, n_projections=128, p=1, seed=43)\n",
+    "swd_svd_hist = sliced_wasserstein_distance(X, svd_hist_flat, n_projections=128, p=1, seed=44)\n",
+    "\n",
+    "print(f\"Baseline SWD (SVD Gaussian independent): {swd_svd_gauss:.6f}\")\n",
+    "print(f\"Baseline SWD (SVD histogram independent): {swd_svd_hist:.6f}\")\n",
+    "\n",
+    "# --- Amplitude/phase space baselines ---\n",
+    "try:\n",
+    "    amp_phase_real_np = amp_phase_feature_tensor[:num_baseline_samples]\n",
+    "except NameError as exc:\n",
+    "    raise RuntimeError('amp_phase_feature_tensor is required for raw-space baselines.') from exc\n",
+    "\n",
+    "amp_real_flat = flatten_feature_tensor_for_swd(amp_phase_real_np, max_points=200000, seed=5)\n",
+    "\n",
+    "amp_gauss_samples = sample_independent_gaussian(amp_phase_real_np, num_baseline_samples, rng)\n",
+    "amp_hist_samples = sample_histogram_baseline(amp_phase_real_np, num_baseline_samples, rng)\n",
+    "\n",
+    "amp_gauss_flat = flatten_feature_tensor_for_swd(amp_gauss_samples, max_points=200000, seed=201)\n",
+    "amp_hist_flat = flatten_feature_tensor_for_swd(amp_hist_samples, max_points=200000, seed=202)\n",
+    "\n",
+    "swd_amp_gauss = sliced_wasserstein_distance(amp_real_flat, amp_gauss_flat, n_projections=128, p=1, seed=45)\n",
+    "swd_amp_hist = sliced_wasserstein_distance(amp_real_flat, amp_hist_flat, n_projections=128, p=1, seed=46)\n",
+    "\n",
+    "print(f\"Baseline SWD (amp/phase Gaussian independent): {swd_amp_gauss:.6f}\")\n",
+    "print(f\"Baseline SWD (amp/phase histogram independent): {swd_amp_hist:.6f}\")\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sliced Wasserstein distance (SVD feature space, W1): 0.182795\n",
-      "Sigma (real, denormalized) -> mean=7.1863, std=3.5152, min=0.9714, max=17.0419\n",
-      "Sigma (generated, denormalized) -> mean=7.7715, std=4.2646, min=0.0007, max=26.1309\n",
-      "amp(U) real -> mean=0.1127, std=0.0541, min=0.0000, max=0.4280\n",
-      "amp(U) generated -> mean=0.1128, std=0.9794, min=-4.9560, max=4.8860\n",
-      "phase(U) real -> mean=-0.0070, std=1.7786, min=-3.1416, max=3.1416\n",
-      "phase(U) generated -> mean=-0.0123, std=1.2881, min=-6.7413, max=7.3794\n",
-      "amp(V) real -> mean=0.4602, std=0.1954, min=0.0002, max=0.9832\n",
-      "amp(V) generated -> mean=0.4474, std=0.9880, min=-4.1532, max=4.8862\n",
-      "phase(V) real -> mean=0.0278, std=1.8044, min=-3.1416, max=3.1416\n",
-      "phase(V) generated -> mean=0.0439, std=1.0810, min=-4.5715, max=5.9537\n"
-     ]
-    }
-   ],
-   "execution_count": 53
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
