--- a/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
+++ b/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
@@ -1734,7 +1734,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-09-19T12:56:39.380518Z"
+     "start_time": "2025-09-19T13:01:34.322027Z"
     }
    },
    "cell_type": "code",
@@ -1816,7 +1816,7 @@
     "_print_stats('phase(V) generated', gen_components['phase_v'])\n",
     "\n",
     "\n",
-    "num_baseline_samples = orig_svd_features_for_metrics.shape[0]\n",
+    "num_baseline_samples = 100\n",
     "rng = np.random.default_rng(1234)\n",
     "\n",
     "# --- SVD space baselines ---\n",
