--- a/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
+++ b/Копия_блокнота__Sionna_stochastic_generator_ext_working_AH_ipynb_.ipynb
@@ -1730,10 +1730,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-09-19T13:05:57.972982Z",
      "start_time": "2025-09-19T13:01:34.322027Z"
     }
    },
@@ -1853,8 +1851,30 @@
     "print(f\"Baseline SWD (amp/phase Gaussian independent): {swd_amp_gauss:.6f}\")\n",
     "print(f\"Baseline SWD (amp/phase histogram independent): {swd_amp_hist:.6f}\")\n"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sliced Wasserstein distance (SVD feature space, W1): 0.182795\n",
+      "Sigma (real, denormalized) -> mean=7.1863, std=3.5152, min=0.9714, max=17.0419\n",
+      "Sigma (generated, denormalized) -> mean=7.7715, std=4.2646, min=0.0007, max=26.1309\n",
+      "amp(U) real -> mean=0.1127, std=0.0541, min=0.0000, max=0.4280\n",
+      "amp(U) generated -> mean=0.1128, std=0.9794, min=-4.9560, max=4.8860\n",
+      "phase(U) real -> mean=-0.0070, std=1.7786, min=-3.1416, max=3.1416\n",
+      "phase(U) generated -> mean=-0.0123, std=1.2881, min=-6.7413, max=7.3794\n",
+      "amp(V) real -> mean=0.4602, std=0.1954, min=0.0002, max=0.9832\n",
+      "amp(V) generated -> mean=0.4474, std=0.9880, min=-4.1532, max=4.8862\n",
+      "phase(V) real -> mean=0.0278, std=1.8044, min=-3.1416, max=3.1416\n",
+      "phase(V) generated -> mean=0.0439, std=1.0810, min=-4.5715, max=5.9537\n",
+      "Baseline SWD (SVD Gaussian independent): 0.036374\n",
+      "Baseline SWD (SVD histogram independent): 0.034881\n",
+      "Baseline SWD (amp/phase Gaussian independent): 0.037115\n",
+      "Baseline SWD (amp/phase histogram independent): 0.041683\n"
+     ]
+    }
+   ],
+   "execution_count": 58
   },
   {
    "metadata": {
