Better learned algorithm

--- a/generative_gsm.ipynb
+++ b/generative_gsm.ipynb
@@ -16,8 +16,8 @@
    "id": "4c49258d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:12:57.976650Z",
-     "start_time": "2025-11-12T17:12:57.959650Z"
+     "end_time": "2025-11-12T23:30:14.139987Z",
+     "start_time": "2025-11-12T23:30:14.125988Z"
     }
    },
    "source": [
@@ -39,8 +39,8 @@
    "id": "0e07d4ac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:13:06.626886Z",
-     "start_time": "2025-11-12T17:12:57.981931Z"
+     "end_time": "2025-11-12T23:30:22.629871Z",
+     "start_time": "2025-11-12T23:30:14.155988Z"
     }
    },
    "source": [
@@ -89,8 +89,8 @@
    "id": "fa8ff889",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:13:20.745717Z",
-     "start_time": "2025-11-12T17:13:06.711887Z"
+     "end_time": "2025-11-12T23:30:38.612742Z",
+     "start_time": "2025-11-12T23:30:22.728874Z"
     }
    },
    "source": [
@@ -124,8 +124,8 @@
    "id": "06b2d6d0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:14:15.133778Z",
-     "start_time": "2025-11-12T17:13:20.931659Z"
+     "end_time": "2025-11-12T23:31:35.108771Z",
+     "start_time": "2025-11-12T23:30:40.335537Z"
     }
    },
    "source": [
@@ -161,8 +161,8 @@
    "id": "43b34947",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:45:32.710037Z",
-     "start_time": "2025-11-12T17:25:07.086754Z"
+     "end_time": "2025-11-13T01:32:36.739265Z",
+     "start_time": "2025-11-12T23:31:35.150773Z"
     }
    },
    "source": [
@@ -176,13 +176,13 @@
     "\n",
     "training_cfg = TrainingConfig(\n",
     "    method=\"dsbm_repo\",  # use repo-backed solvers by default\n",
-    "    batch_size=16,\n",
+    "    batch_size=8,\n",
     "    learning_rate=5e-4,\n",
     "    weight_decay=1e-4,\n",
     "    bridge_solver=\"dsbm\",\n",
     "    bridge_num_steps=20,\n",
-    "    bridge_inner_iters=500,\n",
-    "    bridge_outer_iters=3,\n",
+    "    bridge_inner_iters=2000,\n",
+    "    bridge_outer_iters=6,\n",
     "    bridge_sigma=1.0,\n",
     "    val_split=0.1,\n",
     "    seed=0,\n",
@@ -226,12 +226,12 @@
     {
      "data": {
       "text/plain": [
-       "DSBM b:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "DSBM b:   0%|          | 0/2000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7fa9875f77d7424aaa172186d3f2b136"
+       "model_id": "5acdbc47f0304bfc8b5387a081ec0a58"
       }
      },
      "metadata": {},
@@ -243,12 +243,12 @@
     {
      "data": {
       "text/plain": [
-       "DSBM f:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "DSBM f:   0%|          | 0/2000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1db54a286c274b4b8e57dd3dc6358c35"
+       "model_id": "ce493e7811cf40f1b2aaacf338de6442"
       }
      },
      "metadata": {},
@@ -260,12 +260,12 @@
     {
      "data": {
       "text/plain": [
-       "DSBM b:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "DSBM b:   0%|          | 0/2000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "87639f676e55439cb71ae81f0a40c7e9"
+       "model_id": "1c875f3e9f4d461c837d5d4ba8faa1f9"
       }
      },
      "metadata": {},
@@ -277,12 +277,12 @@
     {
      "data": {
       "text/plain": [
-       "DSBM f:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "DSBM f:   0%|          | 0/2000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f996cdc33c7341e18ad5f40f539a99d8"
+       "model_id": "4d1a90f3524543c4be75689356674775"
       }
      },
      "metadata": {},
@@ -294,12 +294,12 @@
     {
      "data": {
       "text/plain": [
-       "DSBM b:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "DSBM b:   0%|          | 0/2000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "cf91745da92c4ffc943f22c838bf353b"
+       "model_id": "09e036f2f11d4f669ed38d640ed764b8"
       }
      },
      "metadata": {},
@@ -311,12 +311,114 @@
     {
      "data": {
       "text/plain": [
-       "DSBM f:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "DSBM f:   0%|          | 0/2000 [00:00<?, ?it/s]"
       ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "acf8ee54ede2456880d405405e564c2b"
+       "model_id": "ddbe308a55b4404aad4480e6213c4e74"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DSBM b:   0%|          | 0/2000 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8e3a50d329c5465ba2c7774aa2734df0"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DSBM f:   0%|          | 0/2000 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "00704028147e462e9db4200ff63312aa"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DSBM b:   0%|          | 0/2000 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "958e7446d4a942c6aa9a4807c9a9df4a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DSBM f:   0%|          | 0/2000 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "0272374e26974483a0da616ce9117a3e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DSBM b:   0%|          | 0/2000 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fbbf6365749b4aa3877fda3ec2ef7d71"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DSBM f:   0%|          | 0/2000 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "4a4af77497374066aa78ffe975f64a74"
       }
      },
      "metadata": {},
@@ -329,11 +431,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Repo solver dsbm trained on cuda; 3000 inner updates\n"
+      "Repo solver dsbm trained on cuda; 24000 inner updates\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -348,8 +450,8 @@
    "id": "1fa85cec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:19:23.932696Z",
-     "start_time": "2025-11-12T17:19:10.223617Z"
+     "end_time": "2025-11-13T01:32:50.852546Z",
+     "start_time": "2025-11-13T01:32:37.708316Z"
     }
    },
    "source": [
@@ -410,8 +512,8 @@
    "id": "38d8d54b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:19:31.049211Z",
-     "start_time": "2025-11-12T17:19:24.252306Z"
+     "end_time": "2025-11-13T01:32:57.962550Z",
+     "start_time": "2025-11-13T01:32:51.062549Z"
     }
    },
    "source": [
@@ -430,18 +532,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sliced Wasserstein distance (SVD feature space): 0.250810\n",
-      "sigma_real {'label': 'sigma_real', 'mean': 7.126501083374023, 'std': 3.6349661350250244, 'min': 0.6837253570556641, 'max': 19.554134368896484}\n",
-      "sigma_gen {'label': 'sigma_gen', 'mean': 8.711811065673828, 'std': 1.1155962944030762, 'min': 5.835947036743164, 'max': 12.855240821838379}\n",
-      "amp_u_real {'label': 'amp_u_real', 'mean': 0.11312510818243027, 'std': 0.053176119923591614, 'min': 6.92337125656195e-05, 'max': 0.4704986810684204}\n",
-      "amp_u_gen {'label': 'amp_u_gen', 'mean': 0.11038912832736969, 'std': 0.05864511802792549, 'min': 2.719094482017681e-05, 'max': 0.48063966631889343}\n",
-      "phase_u_real {'label': 'phase_u_real', 'mean': -0.01248952466994524, 'std': 1.7829346656799316, 'min': -3.1415915489196777, 'max': 3.1415910720825195}\n",
-      "phase_u_gen {'label': 'phase_u_gen', 'mean': 0.001736940466798842, 'std': 1.7985862493515015, 'min': -3.1415908336639404, 'max': 3.141592502593994}\n",
-      "amp_v_real {'label': 'amp_v_real', 'mean': 0.4604397118091583, 'std': 0.19492380321025848, 'min': 0.0009116752771660686, 'max': 0.9823773503303528}\n",
-      "amp_v_gen {'label': 'amp_v_gen', 'mean': 0.4558846652507782, 'std': 0.20535136759281158, 'min': 0.0009180556517094374, 'max': 0.9929539561271667}\n",
-      "phase_v_real {'label': 'phase_v_real', 'mean': -0.01823325641453266, 'std': 1.8271764516830444, 'min': -3.141587257385254, 'max': 3.141587734222412}\n",
-      "phase_v_gen {'label': 'phase_v_gen', 'mean': 0.0030463137663900852, 'std': 1.8016103506088257, 'min': -3.141582727432251, 'max': 3.1415722370147705}\n",
-      "Grassmann metric: 0.5020547966262915\n"
+      "Sliced Wasserstein distance (SVD feature space): 0.228761\n",
+      "sigma_real {'label': 'sigma_real', 'mean': 7.136143207550049, 'std': 3.615999221801758, 'min': 0.9020366668701172, 'max': 18.666732788085938}\n",
+      "sigma_gen {'label': 'sigma_gen', 'mean': 8.704438209533691, 'std': 1.117308497428894, 'min': 5.461282730102539, 'max': 12.490309715270996}\n",
+      "amp_u_real {'label': 'amp_u_real', 'mean': 0.11288949847221375, 'std': 0.05367458239197731, 'min': 7.911871944088489e-05, 'max': 0.5081979036331177}\n",
+      "amp_u_gen {'label': 'amp_u_gen', 'mean': 0.11040652543306351, 'std': 0.0586123950779438, 'min': 6.725800631102175e-05, 'max': 0.4755725860595703}\n",
+      "phase_u_real {'label': 'phase_u_real', 'mean': -0.007250779774039984, 'std': 1.7774335145950317, 'min': -3.1415913105010986, 'max': 3.1415908336639404}\n",
+      "phase_u_gen {'label': 'phase_u_gen', 'mean': -0.0007549282163381577, 'std': 1.79864501953125, 'min': -3.1415913105010986, 'max': 3.141592502593994}\n",
+      "amp_v_real {'label': 'amp_v_real', 'mean': 0.45989224314689636, 'std': 0.1962117999792099, 'min': 0.000744297110941261, 'max': 0.9813936948776245}\n",
+      "amp_v_gen {'label': 'amp_v_gen', 'mean': 0.455707311630249, 'std': 0.20574480295181274, 'min': 0.0003510155656840652, 'max': 0.9945350885391235}\n",
+      "phase_v_real {'label': 'phase_v_real', 'mean': -0.012668698094785213, 'std': 1.8102134466171265, 'min': -3.141585350036621, 'max': 3.1415796279907227}\n",
+      "phase_v_gen {'label': 'phase_v_gen', 'mean': -0.003410325851291418, 'std': 1.7981683015823364, 'min': -3.1415629386901855, 'max': 3.1415798664093018}\n",
+      "Grassmann metric: 0.5020791578847191\n"
      ]
     }
    ],
@@ -460,8 +562,8 @@
    "id": "5648ee36",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:19:33.690545Z",
-     "start_time": "2025-11-12T17:19:31.908079Z"
+     "end_time": "2025-11-13T01:33:01.005512Z",
+     "start_time": "2025-11-13T01:32:59.310121Z"
     }
    },
    "source": [
@@ -510,9 +612,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score distribution SWD: 0.173023\n",
-      "Validation score stats: {'mean': -0.00017555504746269435, 'std': 0.042140327394008636, 'min': -0.3531128764152527, 'max': 0.3576325476169586}\n",
-      "Generated score stats: {'mean': -0.00038395184674300253, 'std': 0.2280501276254654, 'min': -1.3087732791900635, 'max': 1.2545868158340454}\n"
+      "Score distribution SWD: 0.006960\n",
+      "Validation score stats: {'mean': 0.0003319794777780771, 'std': 0.058978281915187836, 'min': -0.2517900764942169, 'max': 0.26839178800582886}\n",
+      "Generated score stats: {'mean': 0.0003455381956882775, 'std': 0.06166135147213936, 'min': -0.37238216400146484, 'max': 0.381915807723999}\n"
      ]
     }
    ],
@@ -531,8 +633,8 @@
    "id": "5618f90b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T17:19:34.708105Z",
-     "start_time": "2025-11-12T17:19:33.888553Z"
+     "end_time": "2025-11-13T01:33:01.833099Z",
+     "start_time": "2025-11-13T01:33:01.028508Z"
     }
    },
    "source": [
